[metadata]
name = core_test_utils
version = 1.0.0
author = Sarvesh Singh
author_email = sarveshsingh.03@gmail.com
description = Test utils library for python frameworks
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sarvesh371/test-utils
project_urls =
    Bug Tracker = https://github.com/sarvesh371/test-utils/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    aerospike==4.0.0
    allure-pytest==2.8.29
    botocore==1.23.15
    boto3==1.20.15
    cassandra-driver==3.25.0
    Faker==4.1.2
    kafka-python==2.0.2
    kubernetes==22.6.0
    mysql-connector-python==8.0.27
    psycopg2==2.9.3
    psycopg2-binary==2.9.3
    pytz==2020.1
    PyYAML==6.0
    redis==4.2.2
    requests==2.24.0
    testrail-api==1.10.3

[options.packages.find]
where = src
